# RetroPlus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  com.vysp3r.RetroPlus.flatpak  com.vysp3r.RetroPlus.json  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: com.vysp3r.RetroPlus.appdata.xml.in  com.vysp3r.RetroPlus.desktop.in  com.vysp3r.RetroPlus.gschema.xml  com.vysp3r.RetroPlus.metainfo.xml.in  meson.build
data/css/: css.gresource.xml  style.css
data/icons/: icons.gresource.xml
data/logo/: logo.xcf
po/: POTFILES  be.po  com.vysp3r.RetroPlus.pot  com.vysp3r.VimmPlus.pot  cs.po  de.po  es.po  fr.po  id.po  it.po  pt.po  ru.po  tr.po  zh.po
src/: application.vala  constants.vala.in  gresource.xml  main-window.vala  meson.build  preferences-dialog.vala  preferences.vala  status-window.vala  window.vala
src/models/: extra.vala  game.vala  media.vala  region.vala  source.vala  system.vala
src/models/games/: myrient-game.vala  vimms-lair-game.vala
src/utils/: filesystem.vala  parser.vala  web.vala
src/utils/parsers/: myrient-parser.vala  vimms-lair-parser.vala
src/widgets/: download-popover.vala  download-row.vala  game-detail-dialog.vala  game-detail-modal.vala  search-box.vala  search-filter-box.vala  search-row.vala  status-box.vala
src/widgets/game-detail-dialogs/: myrient-game-detail-dialog.vala  vimms-lair-game-detail-dialog.vala
